# rust-template

./: .gitignore  .replit  Cargo.toml  Cargo.toml.prefilled  Dockerfile  README.md  cargo-generate.toml  compose.yaml  debug.ps1  error.ps1  info.ps1  justfile  replit.nix  run.nu  run.ps1  run.sh  trace.ps1  warn.ps1
simple-binary/: Cargo.toml  README.md
simple-binary-staging/: Cargo.toml  cargo-generate.toml  justfile
simple-library/: .gitignore  Cargo.toml  README.md  justfile
simple-library/src/: lib.rs
src/: main.rs
