[package]
name = "{{crate_name}}"
description = "AstragoDE's Rust Template"
authors = ["{{authors}}"]
version = "0.2.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== PROFILES =====

# Dev Profile

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2


# Release Profile

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3


# ===== DEPENDENCIES =====

[dependencies]
log = "0.4.19"
pretty_env_logger = "0.5.0"
