[package]
# name = "rust_template"
name = "{{crate_name}}"
description = "AstragoDE's Rust Template"
# authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== PROFILES =====

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3


# ===== DEPENDENCIES =====

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
